--- a/app/src/main/res/layout/activity_invitation.xml
+++ b/app/src/main/res/layout/activity_invitation.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/invitation_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    android:id="@+id/invitation_container">
+    android:background="@color/colorPrimary">
 
 
     <ImageView
         android:id="@+id/iv_waves"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/icono_ondas"
         android:translationZ="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.38"
-        app:srcCompat="@drawable/circle_shape"
-        android:contentDescription="@string/icono_ondas" />
+        app:srcCompat="@drawable/circle_shape" />
 
     <ImageView
         android:id="@+id/iv_icon_app"
