--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/refresh"
         android:icon="@drawable/ic_refresh_white_24dp"
-        app:showAsAction="always|collapseActionView"
         android:orderInCategory="2"
-        android:title="@string/refresh" />
+        android:title="@string/refresh"
+        app:showAsAction="always|collapseActionView" />
     <item
         android:id="@+id/search"
         android:icon="@drawable/ic_search_white_24dp"
-        app:showAsAction="always|collapseActionView"
-        android:title="@string/search"
         android:orderInCategory="1"
-        app:actionViewClass="android.support.v7.widget.SearchView" />
+        android:title="@string/search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always|collapseActionView" />
 
     <group android:id="@+id/dot">
         <item
             android:id="@+id/contact"
             android:icon="@drawable/ic_more_vert_white_24dp"
-            app:showAsAction="never"
             android:orderInCategory="3"
-            android:title="@string/contact" />
+            android:title="@string/contact"
+            app:showAsAction="never" />
 
         <item
             android:id="@+id/invite"
-            app:showAsAction="never"
             android:orderInCategory="4"
-            android:title="@string/invite" />
+            android:title="@string/invite"
+            app:showAsAction="never" />
     </group>
 
 
