--- a/app/src/main/res/layout/fragment_quake.xml
+++ b/app/src/main/res/layout/fragment_quake.xml
@@ -30,13 +30,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:background="#fafafa"
+        android:elevation="0dp"
         android:visibility="visible"
+        app:cardCornerRadius="4dp"
         app:layout_constraintEnd_toStartOf="@+id/derecha"
         app:layout_constraintStart_toStartOf="@+id/izquierda"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="#fafafa"
-        app:cardCornerRadius="4dp"
-        android:elevation="0dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -79,12 +79,12 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:text="@string/last_quakes_info_card_view_button"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_info_description"
-                android:text="@string/last_quakes_info_card_view_button" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_info_description" />
 
         </android.support.constraint.ConstraintLayout>
 
