--- a/app/src/main/res/layout/info_windows.xml
+++ b/app/src/main/res/layout/info_windows.xml
@@ -80,13 +80,13 @@
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="4dp"
+        android:contentDescription="@string/imagen_estado_sismo"
         card_view:layout_constraintBottom_toBottomOf="@+id/tv_iw_estado"
         card_view:layout_constraintEnd_toStartOf="@+id/tv_iw_estado"
         card_view:layout_constraintHorizontal_chainStyle="packed"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="@+id/tv_iw_estado"
-        card_view:srcCompat="@drawable/ic_baseline_check_circle_24px"
-        android:contentDescription="@string/imagen_estado_sismo" />
+        card_view:srcCompat="@drawable/ic_baseline_check_circle_24px" />
 
     <TextView
         android:id="@+id/tv_iw_estado"
