--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <!--<domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">192.168.0.13/lastquake_server</domain>
+    <domain-config cleartextTrafficPermitted="false">
+        <domain includeSubdomains="true">figonzal.cl</domain>
         <trust-anchors>
             <certificates src="system" />
         </trust-anchors>
-    </domain-config>-->
-    <base-config cleartextTrafficPermitted="true">
+    </domain-config>
+    <domain-config cleartextTrafficPermitted="true">
+        <domain includeSubdomains="true">sismologia.cl</domain>
         <trust-anchors>
             <certificates src="system" />
         </trust-anchors>
-    </base-config>
+    </domain-config>
+    <!--<base-config cleartextTrafficPermitted="true">
+        <trust-anchors>
+            <certificates src="system" />
+        </trust-anchors>
+    </base-config>-->
+
 
 </network-security-config>
