--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,13 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#00bbff</color>
     <color name="grey">#efefef</color>
-    <color name="grey_dark">#939393</color>
     <color name="green_dark">#008e4d</color>
+
+    <!-- Night Color-->
+    <color name="colorPrimaryNightMode">#253561</color>
+    <color name="colorPrimaryDarknightMode">#1C2746</color>
+    <color name="colorAccentNightMode">#006994</color>
+    <color name="backgroundNightMode">#28282C</color>
 
 
     <!-- Colores para cada magnitud-->
