--- a/app/src/main/res/layout-night/fragment_quake.xml
+++ b/app/src/main/res/layout-night/fragment_quake.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundNightMode"
+    android:theme="@style/DarkAppTheme"
     tools:context=".views.QuakeFragment">
 
     <!-- CardView de informacion-->
