--- a/app/src/main/res/layout-night/quake_cardview.xml
+++ b/app/src/main/res/layout-night/quake_cardview.xml
@@ -9,7 +9,8 @@
     android:clickable="true"
     android:elevation="0dp"
     android:focusable="true"
-    android:foreground="?attr/selectableItemBackground">
+    android:foreground="?attr/selectableItemBackground"
+    android:theme="@style/DarkAppTheme">
 
     <ImageView
         android:id="@+id/iv_mag_color"
