--- a/app/src/main/res/layout/info_windows.xml
+++ b/app/src/main/res/layout/info_windows.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/info_windows"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:theme="@style/AppTheme">
 
     <ImageView
         android:id="@+id/iv_iw_mag_color"
