--- a/app/src/main/res/layout/quake_cardview.xml
+++ b/app/src/main/res/layout/quake_cardview.xml
@@ -8,7 +8,8 @@
     android:clickable="true"
     android:elevation="0dp"
     android:focusable="true"
-    android:foreground="?attr/selectableItemBackground">
+    android:foreground="?attr/selectableItemBackground"
+    android:theme="@style/AppTheme">
 
     <ImageView
         android:id="@+id/iv_mag_color"
