--- a/app/src/main/res/layout-night/quake_cardview.xml
+++ b/app/src/main/res/layout-night/quake_cardview.xml
@@ -1,4 +1,4 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
@@ -107,4 +107,4 @@
         card_view:layout_constraintStart_toStartOf="@+id/tv_referencia"
         card_view:layout_constraintTop_toBottomOf="@+id/iv_mag_color" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
