--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,50 +1,45 @@
-<!--
-  ~ Copyright 2018 The app Open Source Project
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
 <androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="Notificaciones">
+    <PreferenceCategory
+        app:iconSpaceReserved="false"
+        app:summary="Recibe notificaciones de sismos de +5.0 grados"
+        app:title="Notificaciones"
+        app:useSimpleSummaryProvider="true">
 
-        <EditTextPreference
-            app:key=""
-            app:title=""
-            app:useSimpleSummaryProvider="true" />
-
-        <ListPreference
-            app:defaultValue="reply"
-            app:entries="@array/reply_entries"
-            app:entryValues="@array/reply_values"
-            app:key="reply"
-            app:title="@string/reply_title"
+        <SwitchPreferenceCompat
+            app:defaultValue="true"
+            app:iconSpaceReserved="false"
+            app:key="pref_suscrito_quake_test"
+            app:summaryOff="Desactivadas"
+            app:summaryOn="Activadas"
+            app:title="Alertas de sismos"
             app:useSimpleSummaryProvider="true" />
 
     </PreferenceCategory>
 
-    <PreferenceCategory app:title="@string/sync_header">
+    <PreferenceCategory
+        app:iconSpaceReserved="false"
+        app:summary="Evitar tu cansancio ocular"
+        app:title="Modo noche"
+        app:useSimpleSummaryProvider="true">
 
-        <SwitchPreferenceCompat
-            app:key="sync"
-            app:title="@string/sync_title" />
+        <SwitchPreference
+            app:defaultValue="false"
+            app:iconSpaceReserved="false"
+            app:key="pref_manual_night_mode"
+            app:summaryOff="Desactivado"
+            app:summaryOn="Activado"
+            app:title="Manual"
+            app:useSimpleSummaryProvider="true" />
 
-        <SwitchPreferenceCompat
-            app:dependency="sync"
-            app:key="attachment"
-            app:summaryOff="@string/attachment_summary_off"
-            app:summaryOn="@string/attachment_summary_on"
-            app:title="@string/attachment_title" />
+        <SwitchPreference
+            app:defaultValue="false"
+            app:iconSpaceReserved="false"
+            app:key="pref_auto_night_mode"
+            app:summaryOff="Desactivado"
+            app:summaryOn="Activado (10pm-7am)"
+            app:title="Automatico"
+            app:useSimpleSummaryProvider="true" />
 
     </PreferenceCategory>
 
