--- a/app/src/main/res/layout-night/activity_quake_details.xml
+++ b/app/src/main/res/layout-night/activity_quake_details.xml
@@ -386,7 +386,7 @@
                         tools:text="2018-08-06 23:45:23" />
 
                     <ImageView
-                        android:id="@+id/iv_pin"
+                        android:id="@+id/iv_posicion_gms"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginStart="16dp"
@@ -410,8 +410,8 @@
                         android:visibility="visible"
                         app:layout_constraintEnd_toStartOf="@+id/guia_vertical"
                         app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toEndOf="@+id/iv_pin"
-                        app:layout_constraintTop_toTopOf="@+id/iv_pin" />
+                        app:layout_constraintStart_toEndOf="@+id/iv_posicion_gms"
+                        app:layout_constraintTop_toTopOf="@+id/iv_posicion_gms" />
 
                     <TextView
                         android:id="@+id/tv_gms"
@@ -485,7 +485,7 @@
                         tools:text="83 km" />
 
                     <ImageView
-                        android:id="@+id/iv_scale"
+                        android:id="@+id/iv_escala"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginStart="8dp"
@@ -507,8 +507,8 @@
                         android:textSize="14sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toEndOf="@+id/iv_scale"
-                        app:layout_constraintTop_toTopOf="@+id/iv_scale" />
+                        app:layout_constraintStart_toEndOf="@+id/iv_escala"
+                        app:layout_constraintTop_toTopOf="@+id/iv_escala" />
 
                     <TextView
                         android:id="@+id/tv_escala"
