--- a/app/src/main/res/drawable/circle_shape.xml
+++ b/app/src/main/res/drawable/circle_shape.xml
@@ -6,7 +6,7 @@
         android:height="100dp"
         />
     <corners android:radius="30dp" />
-    <!--<solid android:color="@android:color/holo_blue_bright"/>-->
+    <solid android:color="@color/grey_dark" />
 
 
 </shape>
