--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#00bbff</color>
     <color name="grey">#efefef</color>
+    <color name="grey_dark">#ADADAD</color>
     <color name="green_dark">#008e4d</color>
 
     <!-- Night Color-->
