Modificacion de codeStyle
Signed-off-by: figonzal1 <Felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/anim/anim_fade.xml
+++ b/app/src/main/res/anim/anim_fade.xml
@@ -9,10 +9,10 @@
         android:toAlpha="1.0" />
 
     <translate
-        android:interpolator="@android:anim/anticipate_overshoot_interpolator"
-        android:fromYDelta="0%"
-        android:toYDelta="80%"
         android:duration="500"
-        android:repeatMode="reverse" />
+        android:fromYDelta="0%"
+        android:interpolator="@android:anim/anticipate_overshoot_interpolator"
+        android:repeatMode="reverse"
+        android:toYDelta="80%" />
 
 </set>
