--- a/app/src/main/res/layout-night/activity_quake_details.xml
+++ b/app/src/main/res/layout-night/activity_quake_details.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   android:background="@color/backgroundNightMode"
-                                                   android:theme="@style/DarkAppTheme"
-                                                   tools:context=".views.QuakeDetailsActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/backgroundNightMode"
+    android:theme="@style/DarkAppTheme"
+    tools:context=".views.QuakeDetailsActivity">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_gmail"
@@ -189,15 +189,19 @@
                 app:layout_constraintStart_toStartOf="@+id/izquierda"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <com.google.android.gms.maps.MapView android:id="@+id/map" android:layout_width="match_parent"
-                                                     android:layout_height="match_parent"/>
+                <com.google.android.gms.maps.MapView
+                    android:id="@+id/map"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
                 <ImageView
-                        android:id="@+id/iv_map_quake"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:visibility="gone"
-                        android:contentDescription="@string/imagen_geografica_posicion_sismo"
-                        android:scaleType="centerCrop"
-                        tools:src="@drawable/placeholder" />
+                    android:id="@+id/iv_map_quake"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/imagen_geografica_posicion_sismo"
+                    android:scaleType="centerCrop"
+                    android:visibility="gone"
+                    tools:src="@drawable/placeholder" />
 
             </androidx.cardview.widget.CardView>
 
