--- a/app/src/main/res/anim/anim_button_welcome.xml
+++ b/app/src/main/res/anim/anim_button_welcome.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:startOffset="600"
     android:fillAfter="true"
-    android:fillEnabled="true">
+    android:fillEnabled="true"
+    android:startOffset="600">
 
     <alpha
         android:duration="1000"
