--- a/app/src/main/res/anim/anim_waves.xml
+++ b/app/src/main/res/anim/anim_waves.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fillAfter="true"
-    android:duration="1500">
+    android:duration="1500"
+    android:fillAfter="true">
 
     <scale
-        android:interpolator="@android:anim/accelerate_interpolator"
         android:fromXScale="0.5"
         android:fromYScale="0.5"
+        android:interpolator="@android:anim/accelerate_interpolator"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:toXScale="4"
-        android:toYScale="4"
         android:repeatCount="infinite"
-        android:repeatMode="restart" />
+        android:repeatMode="restart"
+        android:toXScale="4"
+        android:toYScale="4" />
 
     <alpha
         android:fromAlpha="1.0"
         android:interpolator="@android:anim/anticipate_overshoot_interpolator"
-        android:toAlpha="0.0"
         android:repeatCount="infinite"
-        android:repeatMode="restart" />
+        android:repeatMode="restart"
+        android:toAlpha="0.0" />
 </set>
