--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -114,11 +114,18 @@
         app:srcCompat="@drawable/ic_share_24px" />
 
 
-    <View android:id="@+id/quake_details_container" android:layout_width="0dp" android:layout_height="0dp"
-          android:alpha="0.85" android:background="@color/colorPrimaryDark" android:elevation="5dp"
-          android:visibility="gone" app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent"/>
+    <View
+        android:id="@+id/quake_details_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:alpha="0.85"
+        android:background="@color/colorPrimaryDark"
+        android:elevation="5dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_detail"
@@ -181,16 +188,19 @@
                 app:layout_constraintStart_toStartOf="@+id/izquierda"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <com.google.android.gms.maps.MapView android:id="@+id/map" android:layout_width="match_parent"
-                                                     android:layout_height="match_parent"/>
+                <com.google.android.gms.maps.MapView
+                    android:id="@+id/map"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
                 <ImageView
-                        android:id="@+id/iv_map_quake"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:contentDescription="@string/imagen_geografica_posicion_sismo"
-                        android:scaleType="centerCrop" android:visibility="gone"
-                        tools:src="@drawable/placeholder" />
+                    android:id="@+id/iv_map_quake"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/imagen_geografica_posicion_sismo"
+                    android:scaleType="centerCrop"
+                    android:visibility="gone"
+                    tools:src="@drawable/placeholder" />
 
             </androidx.cardview.widget.CardView>
 
