Dialog de changelog la realizar updates
Signed-off-by: Felipe Gonzalez Alarcon <Felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/layout-night/changelog_layout.xml
+++ b/app/src/main/res/layout-night/changelog_layout.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="8dp"
-    android:background="@color/grey"
-    android:theme="@style/AppTheme"
-    app:cardElevation="@dimen/cardview_default_elevation">
+    android:background="@color/backgroundNightMode"
+    android:theme="@style/DarkAppTheme"
+    app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
