--- a/app/src/main/res/layout-night/settings_activity.xml
+++ b/app/src/main/res/layout-night/settings_activity.xml
@@ -25,7 +25,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout
-        android:id="@+id/settings"
+        android:id="@+id/settings_menu"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
