--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/refresh"
+        android:id="@+id/refresh_menu"
         android:icon="@drawable/ic_refresh_white_24dp"
         android:orderInCategory="2"
         android:title="@string/refresh"
         app:showAsAction="always|collapseActionView" />
     <item
-        android:id="@+id/search"
+        android:id="@+id/search_menu"
         android:icon="@drawable/ic_search_white_24dp"
         android:orderInCategory="1"
         android:title="@string/search"
@@ -19,18 +19,18 @@
     <group android:id="@+id/dot">
 
         <item
-            android:id="@+id/invite"
+            android:id="@+id/invite_menu"
             android:orderInCategory="3"
             android:title="@string/invite"
             app:showAsAction="never" />
         <item
-            android:id="@+id/contact"
+            android:id="@+id/contact_menu"
             android:orderInCategory="5"
             android:title="@string/contact"
             android:visible="false"
             app:showAsAction="never" />
         <item
-            android:id="@+id/settings"
+            android:id="@+id/settings_menu"
             android:orderInCategory="4"
             android:title="@string/settings"
             app:showAsAction="never" />
