--- a/app/src/main/res/layout-night/activity_contact.xml
+++ b/app/src/main/res/layout-night/activity_contact.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundNightMode"
-    android:theme="@style/DarkAppTheme">
+    style="@style/AppTheme">
 
     <!-- AppBar -->
     <androidx.constraintlayout.widget.Guideline
