--- a/app/src/main/res/layout-night/activity_main.xml
+++ b/app/src/main/res/layout-night/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundNightMode"
-    android:theme="@style/DarkAppTheme"
+    android:theme="@style/AppTheme"
     tools:context=".views.MainActivity">
 
     <include
