--- a/app/src/main/res/layout-night/info_windows.xml
+++ b/app/src/main/res/layout-night/info_windows.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/backgroundNightMode"
-    android:theme="@style/DarkAppTheme">
+    style="@style/AppTheme">
 
     <ImageView
         android:id="@+id/iv_iw_mag_color"
