--- a/app/src/main/res/layout-night/quake_cardview.xml
+++ b/app/src/main/res/layout-night/quake_cardview.xml
@@ -2,6 +2,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
+    style="@style/AppTheme"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
@@ -9,8 +10,7 @@
     android:clickable="true"
     android:elevation="0dp"
     android:focusable="true"
-    android:foreground="?attr/selectableItemBackground"
-    android:theme="@style/DarkAppTheme">
+    android:foreground="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/iv_mag_color"
