--- a/app/src/main/res/layout-night/settings_activity.xml
+++ b/app/src/main/res/layout-night/settings_activity.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundNightMode"
-    android:theme="@style/DarkAppTheme">
+    style="@style/AppTheme">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_settings"
